# FineTune

./: .isort.cfg  LICENSE  README.md  pyproject.toml
benchmarks/: becnhmarks.py
benchmarks/optimization_test_functions/: README.md  __init__.py  functions.py  transformations.py
examples/: lgbm_breast_cancer.py
finetune/: finetune.py
finetune/trial_params/: __init__.py  trial_params.py
finetune/trial_params/freeze_params/: __init__.py  freeze_params.py
finetune/trial_params/random_suggest/: __init__.py  random_suggest_categorical.py  random_suggest_float.py  random_suggest_int.py
finetune/trial_params/random_suggest/shared/: __init__.py  random_suggest_float.py
finetune/trials/: __init__.py  trials.py
finetune/visualizations/: __init__.py  plot_optimization_history.py  plot_parallel_coordinate.py  plot_parameter_history.py
