[tool.poetry]
name = "finetune"
version = "0.1.0"
description = "Automatic hyperparameter optimization"
authors = ["Andres Di Giovanni <andresdigiovanni@gmail.com>"]
readme = "README.md"
packages = [{include = "finetune"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.23.4"
pandas = "^1.5.1"
plotly = "^5.11.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
pytest = "^7.2.0"
optuna = "^3.0.3"
lightgbm = "^3.3.3"
sklearn = "^0.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | docs
)/
'''
